style.css
* {
	margin: 0;
	padding: 0;
	outline: none;
}

* {
	box-sizing: border-box;
}

a {
	outline: none;
	text-decoration: none;
}

html {
	height: 100%;
	box-sizing: border-box;
	scroll-behavior: smooth;
}

body {
	background: #16161a;
	font-family: Arial, Helvetica, sans-serif;
	padding: 0;
	margin: 0;
	color: white;
	height: 100%;
	min-height: 100%;
}

.topnav {
	overflow: hidden;
	background: #16161a;
	position: relative;
}

#myLinks {
	display: none;
	margin-bottom: 50px;
}

.topnav a {
	color: white;
	padding: 14px 16px;
	text-decoration: none;
	font-size: 1.2em;
	display: block;
}

.topnav a.icon {
	background: #16161a;
	display: block;
	position: absolute;
	right: 0;
	top: 0;
}

.topnav a:active {
	background: #7f5af0;
	color: black;
}

.active {
	background: #16161a;
	color: white;
}

h1 {
	text-align: center;
	margin: 30px;
}

.homepage {
	background-color: #16161a;
	display: flex;
	flex-direction: column;
}

.grey {
	background: #19191d;
}

.homepage h1 {
	font-size: 1.5em;
	margin-top: 0;
}

.cards {
	display: flex;
	flex-direction: column;
	align-items: center;
}

.cards a {
	width: 85%;
	display: flex;
	justify-content: center;
	margin-top: 20px;
	margin-bottom: 20px;
}

.buttons {
	display: flex;
	justify-content: center;
	margin-bottom: 30px;
	margin-top: 50px;
}

.categoryLink {
	width: 40%;
	margin: 2%;
}

button {
	border: none;
	height: 50px;
	width: 100%;
	border-radius: 5px;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	font-size: 1.3em;
	color: #fffffe;
	outline: none;
	cursor: pointer;
}

.tutorialsButton {
	background: #7f5af0;
}

.tutorialsButton:hover {
	background: #6c4bce;
}

.toolsButton {
	background: #2cb67d;
}

.toolsButton:hover {
	background: #27a06d;
}

button:focus {
	outline: none;
}

.bannerContainer {
	display: flex;
	justify-content: center;
}

.banner {
	background: none;
	border: 2px solid #7f5af0;
	height: 50px;
	display: flex;
	width: 85%;
	justify-content: center;
	align-items: center;
	margin-top: 20px;
	margin-bottom: 20px;
	border-radius: 5px;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

#tools {
	border: 2px solid #27a06d;
}

.category {
	text-align: center;
	color: #fffffe;
	margin: 30px;
}

.card {
	height: auto;
	width: 100%;
	background: #242629;
	display: flex;
	flex-direction: column;
	border-radius: 5px;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	color: white;
}

.card img {
	height: auto;
	width: 90%;
	align-self: center;
	margin-top: 6%;
}

.card div {
	margin: 6%;
}

.description {
	color: #94a1b2;
	margin-top: 10px;
}

footer {
	background-color: #242629;
	height: 70px;
	display: flex;
	align-items: center;
	justify-content: center;
	margin-top: 50px;
}

footer p {
	font-size: 1.5em;
	display: flex;
}

.desktopNav button {
	display: none;
}

.logoDescription {
	display: flex;
	justify-content: center;
	flex-direction: column;
}

.logo {
	display: none;
}

.tiles {
	display: flex;
	justify-content: center;
	flex-wrap: wrap;
}

.tileAnchor {
	display: flex;
	margin: 10px;
	flex-direction: column;
	width: 85%;
}

.tile {
	display: flex;
	height: 250px;
	width: 100%;

	justify-content: space-between;
	align-items: center;
	font-size: 2em;
	background-color: #242629;
	border-radius: 5px;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	color: white;
	flex-direction: column;
	padding: 20px;
}

.tile:hover {
	background: #35373b;
}

.logos {
	height: auto;
	width: 150px;
}

.transparentBg {
	display: flex;
	justify-content: center;

	width: 150px;
	height: 150px;
}

.fit {
	width: 132px;
}

@media (min-width: 680px) {
	.cards {
		flex-direction: row;
		flex-wrap: wrap;
		justify-content: center;
	}

	.categoryLink {
		width: 300px;
	}

	.categoryLink {
		margin: 20px;
	}

	.banner {
		width: 640px;
	}

	.cards a {
		max-width: 300px;
		height: 320px;
		margin: 20px;
	}

	#homeImage {
		display: none;
	}

	.topnav {
		display: none;
	}

	.desktopNav {
		display: flex;
		flex-wrap: wrap;
		justify-content: space-around;
		align-items: center;
		height: 100px;
		padding: 10px;
	}

	.desktopNav a {
		height: 45px;
		margin: 5px;
	}

	.logoDescription {
		display: flex;
		flex-direction: row;
		justify-content: flex-start;
	}

	.logoDescription h1 {
		align-self: center;
		margin: 0;
		margin-bottom: 50px;
		margin-top: 130px;
		font-size: 2em;
	}

	.logo {
		display: block;
		height: auto;
		width: 200px;
		margin-left: 5%;
		margin-right: 13%;
	}

	.desktopNav button {
		display: flex;
		justify-content: center;
		align-items: center;
		background-color: #242629;
		color: white;
		border-radius: 3px;
		height: 45px;
		padding-left: 15px;
		padding-right: 15px;
		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	}
	.desktopNav button:hover {
		background-color: #35373b;
	}

	.tileAnchor {
		width: 250px;
		margin: 20px;
	}
}

